--- a/_includes/assets/sass/components/_site-header.scss
+++ b/_includes/assets/sass/components/_site-header.scss
@@ -55,7 +55,7 @@
 .header-main__logo {
   position: relative;
   z-index: 10;
-  flex: 0 0 50ch;
+  flex: 0 0 20ch;
 
   // .site-logo {
   //   background: url(/static/images/logo.png) 0 0 no-repeat;
